# aoty_pred_pub

./: .env.example  .gitignore  MODEL_CARD.md  README.md  pixi.toml  pyproject.toml
.claude/agents/: gsd-debugger.md  gsd-executor.md  gsd-planner.md  gsd-roadmapper.md
.github/workflows/: ci.yml
.planning/: STATE.md  config.json
.planning/phases/13-gpu-features-testing/: 13-02-SUMMARY.md
.planning/phases/19-documentation-review/: 19-01-SUMMARY.md
citations/: CITATION_NOTES.md
configs/: base.yaml  dev.yaml  publication.yaml
configs/datasets/: README.md  aoty_full.yaml
docs/: ARTIFACTS.md  CLAUDE_HANDOFF.md  CLI.md  CONFIG_SPEC.md  DATA_CONTRACT.md  DECISIONS_TO_LOCK.md  DEV_SETUP.md  EVALUATION_PROTOCOL.md  EXTENSIBILITY.md  GETTING_STARTED.md  GPU_SETUP.md  LEAKAGE_CONTROLS.md  LEGACY_MAPPING.md  PIPELINE_PLAN.md  PIPELINE_RUNBOOK.md  PROJECT_STRUCTURE.md  RAW_SCHEMA_SNAPSHOT.md  SENSITIVITY_MATRIX.md  TEST_MATRIX.md  TEST_PLAN.md
docs/figures/: aoty_pipeline_dark.dot  aoty_pipeline_light.dot  aoty_pipeline_transparent.dot
docs/figures/diagrams/: pipeline_detailed_dark.dot  pipeline_detailed_light.dot  pipeline_detailed_transparent.dot  pipeline_high_dark.dot  pipeline_high_light.dot  pipeline_high_transparent.dot  pipeline_intermediate_dark.dot  pipeline_intermediate_light.dot  pipeline_intermediate_transparent.dot
docs/lineage/: DATA_LINEAGE_DETAILED.md
scripts/: benchmark_gpu.py  check_jax.py  run_benchmark.sh  run_benchmark_wsl.sh  run_publication.ps1  run_publication.sh  run_tests.ps1  test_gpu.py  verify_gpu.py
src/aoty_pred/: __init__.py  cli.py
src/aoty_pred/config/: loader.py  schema.py
src/aoty_pred/data/: cleaning.py  ingest.py  lineage.py  manifests.py  split.py  validation.py
src/aoty_pred/evaluation/: __init__.py  calibration.py  cv.py  metrics.py
src/aoty_pred/features/: __init__.py  artist.py  collaboration.py  core.py  descriptor_pca.py  errors.py  genre.py  pca.py  pipeline.py  registry.py  temporal.py
src/aoty_pred/gpu_memory/: __init__.py  estimate.py  measure.py  platform.py  query.py
src/aoty_pred/io/: paths.py  readers.py  writers.py
src/aoty_pred/models/: __init__.py
src/aoty_pred/models/bayes/: __init__.py  diagnostics.py  fit.py  io.py  model.py  predict.py  priors.py
src/aoty_pred/pipelines/: __init__.py  build_features.py  create_splits.py  errors.py  evaluate.py  manifest.py  orchestrator.py  predict_next.py  prepare_dataset.py  publication.py  sensitivity.py  stages.py  train_bayes.py
src/aoty_pred/preflight/: __init__.py  cache.py  calibrate.py  check.py  full_check.py  mini_run.py  output.py
src/aoty_pred/reporting/: __init__.py  figures.py  model_card.py  tables.py
src/aoty_pred/utils/: environment.py  git_state.py  hashing.py  logging.py  random.py
src/aoty_pred/visualization/: __init__.py  charts.py  dashboard.py  diagrams.py  export.py  server.py  theme.py
src/aoty_pred/visualization/introspection/: __init__.py  aggregator.py  base.py  cleaning_introspector.py  config_introspector.py  renderer.py  (+9 more)
tests/: conftest.py  test_diagram_renderer.py
tests/e2e/: conftest.py  test_full_pipeline.py
tests/integration/: conftest.py  test_build_features_pipeline.py  test_data_features.py  test_model_evaluation.py  test_n_reviews_flow.py
tests/unit/: test_calibration.py  test_cli_pipeline.py  test_compute_sigma_scaled.py  test_config_loader.py  test_cv.py  test_dashboard_loading.py  test_data_validation.py  test_diagnostics.py  test_feature_album_type.py  test_feature_artist_reputation.py  test_feature_base.py  test_feature_collaboration.py  test_feature_core_numeric.py  test_feature_descriptor_pca.py  test_feature_genre_pca.py  test_feature_pipeline.py  test_feature_registry.py  test_feature_temporal.py  test_io.py  test_metrics.py  test_model_fit.py  test_pipeline_manifest.py  test_pipeline_orchestrator.py  test_pipeline_stages.py  test_reporting_figures.py  test_reporting_model_card.py  test_reporting_tables.py  test_sensitivity.py  test_utils_environment.py  test_utils_git_state.py  test_utils_random.py  test_visualization_diagrams.py
tests/unit/data/: test_ingest.py
tests/unit/gpu_memory/: test_estimate.py  test_platform.py  test_query.py
tests/unit/pipelines/: test_errors.py  test_evaluate_posterior.py  test_predict_next.py  test_publication.py  test_train_bayes.py
tests/unit/preflight/: test_cache_consistency.py  test_calibrate.py  test_check.py  test_full_check.py  test_full_output.py  test_measure.py  test_mini_run.py  test_output.py
(+12 files in other folders)
