[project]
name = "aoty-pred"
version = "0.1.0"
description = "Publication-focused Bayesian artist prediction pipeline"
requires-python = ">=3.11"
readme = "README.md"
license = { text = "Proprietary" }

dependencies = [
  "numpy>=1.26",
  "pandas>=2.2",
  "pandera>=0.18",
  "pyarrow>=15.0",
  "pydantic>=2.6",
  "pyyaml>=6.0",
  "scikit-learn>=1.4",
  "scipy>=1.11",
  "statsmodels>=0.14",
  "structlog>=24.1",
  "pymc>=5.13",
  "arviz>=0.18",
  "xarray>=2024.1",
  "typer>=0.12",
  "rich>=13.7",
  "matplotlib>=3.8",
  "seaborn>=0.13",
  "uncertainties>=3.1",
  "properscoring>=0.1",
]

[project.scripts]
aoty-pipeline = "aoty_pred.cli:main"

[project.optional-dependencies]
gpu = [
  "nvidia-ml-py>=13.580.65",
]
dev = [
  "pytest>=8.0",
  "pytest-cov>=4.1",
]

[tool.pytest.ini_options]
addopts = "-q"
python_files = ["test_*.py"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "e2e: marks tests as end-to-end tests",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.per-file-ignores]
# Imports at bottom required to avoid circular imports with submodules
"src/aoty_pred/preflight/__init__.py" = ["E402"]
# Test files: allow imports after pytest.skip, unused vars in test setup, long lines
"tests/**/*.py" = ["E402", "F401", "F841", "E501"]
# Scripts: allow long lines in docstrings/examples, unused imports for availability checks
"scripts/*.py" = ["E501", "F401"]

[tool.mypy]
python_version = "3.11"
warn_return_any = false  # Too noisy for data science code
warn_unused_ignores = false  # Allow unused ignores during transition
disallow_untyped_defs = false  # Too strict for gradual adoption
ignore_missing_imports = true  # Many data science libs lack stubs
check_untyped_defs = false  # Don't check untyped functions
strict = false
# Ignore specific error codes that are too noisy
disable_error_code = ["arg-type", "assignment", "return-value", "var-annotated", "misc", "union-attr", "operator", "dict-item", "attr-defined", "call-arg", "no-any-return"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
